2010-03-05 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydiff.el (tinydiff-patch): Display 'hunk' if TYPE is set
	in questions.

2010-03-01 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-freshmeat-bug-type-p): remove
	extra unused regexp. This fixes CPAN bug URL detection.

2009-12-31  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-reopen):
	Call `tinydebian-bts-mail-ctrl-command-add-macro' with arg 'at-start'.
	(tinydebian-bts-mail-ctrl-command-submitter): New user command.

2009-12-30  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-owner): New.
	(tinydebian-email-debian-control-commands): New.
	(tinydebian-mail-mode-debian-address-ask-bug):
	Use `tinydebian-email-debian-control-commands'.
	(tinydebian-bug-nbr-any):
	Use `tinydebian-email-debian-control-commands'.

2009-12-08  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-reassign): Correct
	PACKAGE argument handling.

2009-12-05  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode-wizard):
	adjust 'unarchive' command menu and key binding from
	'U' to 'u'.
	(tinydebian-bts-mail-ctrl-command-add): Add parameter AT-BEG.
	(tinydebian-bts-mail-ctrl-command-add-macro): Add parameter AT-BEG.
	(tinydebian-bts-mail-ctrl-command-unarchive): Add command to the
	beginning.

2009-10-29  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-trac-bug-type-p): New.
	(tinydebian-bug-bts-type-determine): Support Trac.

2009-10-27  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-bts-type-determine):
	Add freshmeat.net suport.
	(tinydebian-freshmeat-bug-type-p): New.
	(tinydebian-bug-url-forward): Add freshmeat.net suport.
	(tinydebian-bug-nbr-debian-url-forward): Correct variable bug to
	str.
	(tinydebian-bug-ask-bts-and-number): Add freshmeat.net suport.

2009-10-25  Jari Aalto  <jari.aalto@cante.net>
